tests/base/invalid/Return_CompileFail_8.whiley
import whiley.lang.*:*

void f():
    return 1
